# dart_2025_vision

./: .gitignore  .gitmodules
src/dart_bringup/: CMakeLists.txt  package.xml
src/dart_bringup/launch/: camera.launch.py  detector.launch.py  usb.launch.py
src/dart_detector/: CMakeLists.txt  package.xml
src/dart_detector/config/: settings.yaml
src/dart_detector/include/: comm_protocol.hpp  logger.hpp  ros_params.hpp  ros_params_manager.hpp
src/dart_detector/libs/: CMakeLists.txt
src/dart_detector/src/: node.cc
src/dart_transporter/: CMakeLists.txt  package.xml
src/dart_transporter/config/: settings.yaml
src/dart_transporter/include/: usb.hpp
src/dart_transporter/include/sdk/include/: usbcdc_transporter.hpp
src/dart_transporter/include/sdk/src/: usbcdc_transporter.cpp
src/dart_transporter/src/: usb_node.cpp
src/dart_transpoter/: CMakeLists.txt  package.xml
src/dart_transpoter/include/sdk/include/: transporter_interface.hpp
src/dart_transpoter/include/sdk/src/: usbcdc_transporter.cpp
src/dart_transpoter/src/: usb_node.cpp
src/rmos_cam/: CMakeLists.txt
src/rmos_cam/config/: daheng_cam_info.yaml  daheng_cam_settings.yaml
src/rmos_cam/include/rmos_cam/: cam_node.hpp  camera_interface.hpp  daheng.hpp  virtual_cam.hpp
src/rmos_cam/src/: daheng.cpp  daheng_cam_node.cpp  virtual_cam.cpp  virtual_cam_node.cpp
